argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/allow-shared-secret: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocdui.ayyarsachin.shop
    secretName: wildcard-tls-secret
  rules:
  - host: argocdui.ayyarsachin.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
